<resources>
    <string name="app_name">Sample Santander</string>
    <string name="name_user">Olá, </string>
    <string name="ag_user" translatable="false">Ag </string>
    <string name="conta_user" translatable="false">Cc </string>
    <string name="txt_saldo_disponivel">Saldo disponível</string>
    <string name="valor_saldo" translatable="false">R$ 1.324,64</string>
    <string name="txt_extrato">Ver extrato</string>
    <string name="text_pagar">Pagar</string>
    <string name="txt_recarga">Recarga</string>
    <string name="txt_cart_o_final">Cartão final</string>
    <string name="saldo_limite">Saldo + Limite:</string>
    <string name="transferir">Transferir</string>
</resources>