<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_saudacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_user"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginStart="@dimen/size_8dp" />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        app:layout_constraintStart_toEndOf="@id/tv_saudacao"
        app:layout_constraintTop_toTopOf="@id/tv_saudacao" />

    <TextView
        android:id="@+id/tv_ag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_6dp"
        android:text="@string/ag_user"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_usuario"
        app:layout_constraintTop_toBottomOf="@id/tv_usuario"
        android:layout_marginRight="@dimen/size_2dp" />

    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_2dp"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_ag"
        app:layout_constraintTop_toTopOf="@id/tv_ag"
        android:layout_marginLeft="@dimen/size_2dp" />

    <TextView
        android:id="@+id/tv_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_6dp"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold"
        android:text="@string/conta_user"
        app:layout_constraintStart_toEndOf="@id/tv_agencia"
        app:layout_constraintTop_toTopOf="@id/tv_agencia"
        android:layout_marginLeft="@dimen/size_6dp" />

    <TextView
        android:id="@+id/tv_conta_corrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_6dp"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_cc"
        app:layout_constraintTop_toTopOf="@id/tv_cc"
        android:layout_marginLeft="@dimen/size_6dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_saldo"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_200dp"
        android:layout_marginLeft="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_32dp"
        android:layout_marginRight="@dimen/size_16dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_agencia">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16dp"
                android:layout_marginTop="@dimen/size_16dp"
                android:src="@drawable/ic_update"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="@dimen/size_16dp" />

            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16dp"
                android:text="@string/txt_saldo_disponivel"
                android:textSize="@dimen/size_18sp"
                app:layout_constraintBottom_toBottomOf="@id/img_saldo"
                app:layout_constraintStart_toEndOf="@id/img_saldo"
                app:layout_constraintTop_toTopOf="@id/img_saldo"
                android:layout_marginLeft="@dimen/size_16dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:layout_marginEnd="@dimen/size_16dp"
                android:src="@drawable/ic_expand_less"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="@dimen/size_1dp" />

            <TextView
                android:id="@+id/txt_valor_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_22dp"
                android:text="@string/valor_saldo"
                android:textSize="@dimen/size_22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/img_saldo"
                app:layout_constraintTop_toBottomOf="@id/img_saldo" />

            <TextView
                android:id="@+id/tv_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:text="@string/saldo_limite"
                android:textSize="@dimen/size_16sp"
                app:layout_constraintStart_toStartOf="@id/txt_valor_saldo"
                app:layout_constraintTop_toBottomOf="@id/txt_valor_saldo" />

            <TextView
                android:id="@+id/tv_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 2.324,64"
                android:textSize="@dimen/size_16sp"
                app:layout_constraintStart_toEndOf="@id/tv_saldo_limite"
                app:layout_constraintTop_toTopOf="@id/tv_saldo_limite" />


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:layout_marginStart="@dimen/size_16dp"
                android:layout_marginTop="@dimen/size_24dp"
                android:layout_marginEnd="@dimen/size_16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@id/txt_extrato"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_valor_saldo"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="size_1dp"
                tools:layout_editor_absoluteY="size_151dp" />

            <TextView
                android:id="@+id/txt_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:layout_marginEnd="@dimen/size_4dp"
                android:text="@string/txt_extrato"
                android:textColor="@color/redSecundary"
                android:textSize="@dimen/size_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/divider"
                android:layout_marginRight="@dimen/size_4dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_pagar"
        android:layout_width="@dimen/size_100dp"
        android:layout_height="@dimen/size_100dp"
        android:layout_margin="@dimen/size_16dp"
        android:elevation="@dimen/size_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_saldo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                android:src="@drawable/ic_credit_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:text="@string/text_pagar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_pagar" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_transferir"
        android:layout_width="@dimen/size_100dp"
        android:layout_height="@dimen/size_100dp"
        android:layout_margin="@dimen/size_16dp"
        android:elevation="8dp"
        app:layout_constraintLeft_toRightOf="@id/card_pagar"
        app:layout_constraintRight_toLeftOf="@id/card_recarga"
        app:layout_constraintTop_toBottomOf="@id/card_saldo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                android:src="@drawable/ic_payments"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:text="@string/transferir"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_transferir" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_recarga"
        android:layout_width="@dimen/size_100dp"
        android:layout_height="@dimen/size_100dp"
        android:layout_margin="@dimen/size_16dp"
        android:elevation="@dimen/size_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/card_transferir"
        app:layout_constraintTop_toBottomOf="@id/card_saldo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                android:src="@drawable/ic_mobile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:text="@string/txt_recarga"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_recarga" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_55dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_32dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:backgroundTint="@color/redSecundary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_transferir">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_cartao_final"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                android:text="@string/txt_cart_o_final"
                android:textColor="@color/white"
                android:textSize="@dimen/size_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_cartao_numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                android:text="0033"
                android:textColor="@color/white"
                android:textSize="@dimen/size_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/txt_cartao_final"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_expand_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>